<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- LLPadre -->



    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D3D3D3"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/programacion_multimedia_y_dispositivos_moviles"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0000FF" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/botonRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rojo" />

            <Button
                android:id="@+id/botonazul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azul" />

            <Button
                android:id="@+id/botonverde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verde" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#0000FF" />
    </LinearLayout>
</LinearLayout>
